# chat-log

./: .gitignore  Dockerfile  README.md  auto_update.sh  bm25.py  com.chatlog.daily.plist.template  docker-compose.yml  docker-entrypoint.sh  eval.py  import_logs.py  install_launchd.sh  mcp_server.py  pyproject.toml  rag.py  server.py  setup.sh
.github/workflows/: ci.yml
eval/: qa.jsonl
examples/: 2025-01-15_caching.jsonl  2025-02-10_pagination.jsonl  2025-03-22_retry.jsonl  2025-04-05_auth-token.jsonl  2025-05-20_db-index.jsonl
tests/: conftest.py  test_bm25.py  test_import.py  test_rag.py  test_server.py
web/: index.html
